<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.profile.risk_assessment_test.test.RiskAssessmentTestInfoFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/covid_19_infection_risk_assessment_test"
        android:textColor="@color/colorTextBlack"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_border_disabled"
        android:orientation="vertical"
        android:paddingTop="4dp"
        android:paddingBottom="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/important_note"
            android:textColor="@color/colorTextError"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_outline_report_problem_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/important_note_pt1"
            android:textColor="@color/colorTextBlack"
            app:drawableStartCompat="@drawable/ic_baseline_arrow_right_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/important_note_pt2"
            android:textColor="@color/colorTextBlack"
            app:drawableStartCompat="@drawable/ic_baseline_arrow_right_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/important_note_pt3"
            android:textColor="@color/colorTextBlack"
            app:drawableStartCompat="@drawable/ic_baseline_arrow_right_24" />

    </LinearLayout>

</LinearLayout>