<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.profile.risk_assessment_test.test.RiskAssessmentTestSymptomsWorseningFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_your_symptoms_worsening"
        android:textColor="@color/colorTextBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="8dp"/>

    <RadioGroup
        android:id="@+id/symptoms_worsening"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp">

        <RadioButton
            android:id="@+id/yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/yes"
            android:textColor="@color/colorTextBlack"
            android:textSize="18sp"
            app:buttonTint="@color/colorMainThemeBlue" />

        <RadioButton
            android:id="@+id/no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/no"
            android:textColor="@color/colorTextBlack"
            android:textSize="18sp"
            app:buttonTint="@color/colorMainThemeBlue" />

    </RadioGroup>

</LinearLayout>