<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/vCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false"
    app:cardBackgroundColor="@android:color/white"
    app:cardElevation="6dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="6dp"
            android:layout_height="match_parent"
            android:background="@color/colorTextError" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_risk_assessment_test_result"
                android:textColor="@color/colorTextBlack"
                android:textSize="20sp"
                android:padding="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high_risk_of_infection"
                android:textColor="@color/colorTextBlack"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="8dp"
                app:drawableEndCompat="@drawable/ic_baseline_sentiment_very_dissatisfied_24" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/monitor_your_symptoms_and_repeat_the_risk_assessment_test_twice_a_day"
        android:textColor="@color/colorTextBlack"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/remember_about_the_rules_of_hygiene"
        android:textColor="@color/colorTextBlack"
        android:textSize="16sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>